--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.3.11",
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
-    "apollo-boost": "^0.1.28",
-    "graphql": "^14.1.1",
+    "graphql": "^15.5.0",
     "react": "^16.8.2",
-    "react-apollo": "^2.4.1",
     "react-dom": "^16.8.2",
     "react-scripts": "2.1.5"
   },
